crates/codira_codegen/src/snapshots/codira_codegen__test__compare_op_u8.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func equals(a: u8, b: u8) -> bool { a == b }\n    public func not_equal(a: u8, b: u8) -> bool { a != b}\n    public func less(a: u8, b: u8) -> bool { a < b }\n    public func less_equal(a: u8, b: u8) -> bool { a <= b }\n    public func greater(a: u8, b: u8) -> bool { a > b }\n    public func greater_equal(a: u8, b: u8) -> bool { a >= b }\n                        "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @equals(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %eq = icmp eq i8 %0, %1
  ret i1 %eq
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @not_equal(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %neq = icmp ne i8 %0, %1
  ret i1 %neq
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @less(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %less = icmp ult i8 %0, %1
  ret i1 %less
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @less_equal(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %lesseq = icmp ule i8 %0, %1
  ret i1 %lesseq
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @greater(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %greater = icmp ugt i8 %0, %1
  ret i1 %greater
}

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i1 @greater_equal(i8 %0, i8 %1) local_unnamed_addr #0 {
body:
  %greatereq = icmp uge i8 %0, %1
  ret i1 %greatereq
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [2 x ptr] zeroinitializer
