crates/codira_codegen/src/snapshots/codira_codegen__test__conditional_return_expr.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func main(a:i32) -> i32 {\n        if a > 4 {\n            return a;\n        }\n        a - 1\n    }\n    "
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

; Function Attrs: mustprogress nofree norecurse nosync nounwind willreturn memory(none)
define i32 @main(i32 %0) local_unnamed_addr #0 {
body:
  %greater = icmp slt i32 %0, 5
  %sub = sext i1 %greater to i32
  %common.ret.op = add i32 %0, %sub
  ret i32 %common.ret.op
}

attributes #0 = { mustprogress nofree norecurse nosync nounwind willreturn memory(none) }

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
