crates/codira_codegen/src/snapshots/codira_codegen__test__eidos_folds_across_a_call.snap
---
source: crates/codira_codegen/src/test.rs
expression: "\n    public func inner() -> i64 {\n        6 * 7\n    }\n\n    public func outer() -> i64 {\n        inner() + 0\n    }"
---
; == FILE IR (mod) =====================================
; ModuleID = 'mod'
source_filename = "mod"

@global_type_lookup_table = external global [1 x ptr]

define i64 @inner() {
body:
  ret i64 42
}

define i64 @outer() {
body:
  ret i64 42
}

; == GROUP IR (mod) ====================================
; ModuleID = 'group_name'
source_filename = "group_name"

@global_type_lookup_table = global [1 x ptr] zeroinitializer
